--- a/Bootstrap Basics/index.html
+++ b/Bootstrap Basics/index.html
@@ -53,6 +53,44 @@
 
 
     <!-- User Table -->
+    <h2 class="text-center text-primary mt-5">User List</h2>
+    <table class="table table-striped table-hover border mt-3">
+        <thead class="table-dark">
+            <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Role</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Ardra Braswell</td>
+                <td>bardra@mail.com</td>
+                <td>Admin</td>
+                <td class="text-success">Active</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Jane Doe</td>
+                <td>jane.doe@example.com</td>
+                <td>Admin</td>
+                <td class="text-success">Active</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>John Smith</td>
+                <td>john.smith@example.com</td>
+                <td>User</td>
+                <td class="text-muted">Inactive</td>
+            </tr>
+        </tbody>
+    </table>
+
+</div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
