Button that is hidden on small screens was added

--- a/Bootstrap Basics/index.html
+++ b/Bootstrap Basics/index.html
@@ -48,7 +48,22 @@
                     I Agree to the Terms.
                 </label>
             </div>
-            <button class="btn btn-success">Add User</button>
+            <div class="container">
+                <form>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col">
+                                <button type="submit" class="btn btn-success mb-2">Add User</button>
+                            </div>
+                            <div class="col">
+                                <button type="reset" class="btn btn-danger d-none d-md-block">Reset</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            
+            
         </form>
 
 
