--- a/Bootstrap Basics/index.html
+++ b/Bootstrap Basics/index.html
@@ -28,7 +28,12 @@
     <!-- Main Content -->
     <div class="container mt-5 pt-5">
     <!-- Image -->
-        
+    <div class="container-fluid p-0">
+        <img src="https://placehold.co/1920x600?text=Module\n5" class="img-fluid" alt="Image">
+    </div>
+    <div class="text-center mt-3">
+        <img src="https://placehold.co/600x400?text=Bootstrap" class="rounded-circle" alt="rounded image">
+    </div>    
     <!-- User Registration Form -->
     <h2 class="text-center text-primary mt-5">Registration Form</h2>
         <form class="border p-4 shadow-sm bg-light" class="was-validated">
